# CherryDatabase

./: CMakeLists.txt  README.md
include/: cherrydatabase.h  cherrydbwidget.h  editbrand.h  editcategory.h  editentry.h  newentry.h
src/: cherrydatabase.cpp  cherrydbwidget.cpp  cherrydbwidget.ui  editbrand.cpp  editbrand.ui  editcategory.cpp  editcategory.ui  editentry.cpp  editentry.ui  newentry.cpp  newentry.ui
translations/: cherrydatabase_de.ts
